# JOBLASS

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  demo_db.py  pyproject.toml
config/default/: profile_template.yaml  rules.yaml  scoring.yaml
docs/configuration/: CONFIGURATION_GUIDE.md  RULES_SYNTAX_REFERENCE.md
joblass/: config.py
joblass/config/: __init__.py  loader.py  models.py
joblass/db/: __init__.py  connection.py  engine.py  models.py  repository.py  validators.py
joblass/scoring/: __init__.py
joblass/scrapers/: base.py  glassdoor.py
joblass/utils/: control.py  logger.py  selenium_helpers.py
joblass/workflows/: __init__.py  search_company_glassdoor_profile_page_workflow.py  search_job_glassdoor_workflow.py
scripts/: install_chrome.sh
tests/: README.md  conftest.py  test_database.py  test_deduplication.py  test_glassdoor.py  test_modals.py  test_scraped_job_validation.py  test_search_criteria.py  test_search_session.py  test_validators.py  test_workflow_integration.py
tests/e2e/: test_workflow_complete.py
tests/fixtures/: glassdoor_job_search_page.html
tests/integration/: test_repositories.py  test_scraper_extraction.py  test_session_tracking.py
tests/unit/: test_extraction_helpers.py  test_models_validation.py
