[project]
name = "automate-intership-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium==4.33.0",
    "urllib3==2.4.0",
    "undetected-chromedriver==3.5.5",
    "webdriver-manager==4.0.2",
]

# dev dependencies
[project.optional-dependencies]
dev = [
    "ipykernel>=6.24.0",
    "jupyter>=1.0.0",      
    "notebook>=7.0.0",    
]

[project.scripts]
joblass = "joblass.cli.commands:main"

[tool.setuptools]
packages = ["joblass"]