[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "joblass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium==4.33.0",
    "urllib3==2.4.0",
    "undetected-chromedriver==3.5.5",
    "webdriver-manager==4.0.2",
    "pydantic==2.0.3",
]

# dev dependencies
[project.optional-dependencies]
dev = [
    "ipykernel>=6.24.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "black>=25.9.0",
    "ruff>=0.0.297",
    "pytest>=7.4.0",
    "pre-commit>=3.4.0",
]

#[project.scripts]
#joblass = "joblass.cli.commands:main"

[tool.setuptools]
packages = ["joblass"]


[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "C", "B", "I"]  # pick a subset you care about
lint.ignore = ["E501", "F403"]
exclude = ["tests/*", "docs/*"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",                    # Verbose output
    "--strict-markers",      # Raise error on unknown markers
    "--tb=short",            # Shorter traceback format
    "--color=yes",           # Colored output
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]